# PaintBridge

./: .env.example  .gitignore  CLAUDE.md  Foundry.toml  README.md  addresses.json  ape-config.yaml  data.json  foundry.toml  package.json  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py  config.py  constants.py  lz.py  main.py  nft.py  nft_bridge.py  tg.py  utils.py
bot/: __init__.py
cache/: solidity-files-cache.json
contracts/: BridgedNFT.sol  CrossChainAddressRegistry.vy  ERC1155.sol  ERC1155Base.sol  ERC2981.sol  ERC721.sol  ERC721Base.sol  ERC721Enumerable.sol  ERC721Factory.sol  LZControl.sol  MockEndpoint.sol  MyOApp.sol  NFTBridgeControl.sol  NFTBridgeControlHarness.sol  NFTFactory.sol  OptionsBuilder.sol  OriginAuthorizer.sol  PermissionedMintingNFT.sol  RoyaltyRegistry.sol  SCCNFTBridge.sol  SCCNFTBridgeHarness.sol
contracts/interfaces/: IERC1155.sol  IERC165.sol  IERC721Enumerable.sol  IManaged1155.sol  IManaged721.sol  IManagedNFT.sol  INFTFactory.sol
contracts/utils/: LibString.sol  Utils.sol
script/: Deploy.s.sol  DeployAll.s.sol  DeployOriginAuthorizer.s.sol  SetDestinationFactory.s.sol  SetOriginCaller.s.sol
scripts/: deploy.py  lz.py
test/: ERC1155.t.sol  ERC721.t.sol  ERC721Enumerable.t.sol  NFTBridgeControl.t.sol  NFTBridgeControlHarness.sol  NFTFactory.t.sol  SCCNFTBridge.t.sol  SCCNFTBridgeHarness.sol
tests/: test_erc721factory.py
